// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/molecules/TextField default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c7 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c5 {
  background-color: transparent;
  left: 0px;
  position: absolute;
  pointer-events: none;
  top: -1.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c2:hover {
  color: #E4E5ED;
  border-color: #00BF8E;
}

.c3 {
  position: relative;
  width: 100%;
  padding-right: 0;
  border-radius: 4px;
  background-color: white;
}

.c4 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
  border-radius: 4px;
}

.c4::-webkit-input-placeholder {
  color: #9194A7;
}

.c4::-moz-placeholder {
  color: #9194A7;
}

.c4:-ms-input-placeholder {
  color: #9194A7;
}

.c4::placeholder {
  color: #9194A7;
}

.c1 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c6 {
  top: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      disabled={false}
    >
      <div
        className="c3"
      >
        <input
          className="c4"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          value="Value"
        />
        <label
          className="fa-text-gray-01 fa-text-sm c5"
          disabled={false}
        >
          Label
        </label>
      </div>
    </div>
    <div
      className="c6"
    />
  </div>
  <div
    className="c7"
  />
</div>
`;

exports[`Storyshots @components/molecules/TextField with content left 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c8 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c6 {
  background-color: transparent;
  left: 0px;
  position: absolute;
  pointer-events: none;
  top: -1.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c2:hover {
  color: #E4E5ED;
  border-color: #00BF8E;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: relative;
  width: 100%;
  padding-right: 0;
  border-radius: 4px;
  background-color: white;
}

.c5 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
  border-radius: 4px;
}

.c5::-webkit-input-placeholder {
  color: #9194A7;
}

.c5::-moz-placeholder {
  color: #9194A7;
}

.c5:-ms-input-placeholder {
  color: #9194A7;
}

.c5::placeholder {
  color: #9194A7;
}

.c1 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c7 {
  top: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      disabled={false}
    >
      <span
        className="c3"
      >
        <span>
          Content Left
        </span>
      </span>
      <div
        className="c4"
      >
        <input
          className="c5"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          value="Value"
        />
        <label
          className="fa-text-gray-01 fa-text-sm c6"
          disabled={false}
        >
          Label
        </label>
      </div>
    </div>
    <div
      className="c7"
    />
  </div>
  <div
    className="c8"
  />
</div>
`;

exports[`Storyshots @components/molecules/TextField with content right 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c8 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c5 {
  background-color: transparent;
  left: 0px;
  position: absolute;
  pointer-events: none;
  top: -1.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c2:hover {
  color: #E4E5ED;
  border-color: #00BF8E;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  position: relative;
  width: 100%;
  padding-right: 0;
  border-radius: 4px;
  background-color: white;
}

.c4 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
  border-radius: 4px;
}

.c4::-webkit-input-placeholder {
  color: #9194A7;
}

.c4::-moz-placeholder {
  color: #9194A7;
}

.c4:-ms-input-placeholder {
  color: #9194A7;
}

.c4::placeholder {
  color: #9194A7;
}

.c1 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c7 {
  top: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      disabled={false}
    >
      <div
        className="c3"
      >
        <input
          className="c4"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          value="Value"
        />
        <label
          className="fa-text-gray-01 fa-text-sm c5"
          disabled={false}
        >
          Label
        </label>
      </div>
      <span
        className="c6"
      >
        <span>
          Content Right
        </span>
      </span>
    </div>
    <div
      className="c7"
    />
  </div>
  <div
    className="c8"
  />
</div>
`;

exports[`Storyshots @components/molecules/TextField with errors 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c9 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c7 {
  color: #E84545;
  font-size: 12px;
  font-weight: 300;
}

.c8 {
  margin: 0;
  line-height: 1rem;
}

.c5 {
  background-color: transparent;
  left: 0px;
  position: absolute;
  pointer-events: none;
  top: -1.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E84545;
  border-radius: 4px;
  color: #E84545;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c2:hover {
  color: #131336;
  border-color: #E84545;
}

.c3 {
  position: relative;
  width: 100%;
  padding-right: 0;
  border-radius: 4px;
  background-color: white;
}

.c4 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
  border-radius: 4px;
}

.c4::-webkit-input-placeholder {
  color: #9194A7;
}

.c4::-moz-placeholder {
  color: #9194A7;
}

.c4:-ms-input-placeholder {
  color: #9194A7;
}

.c4::placeholder {
  color: #9194A7;
}

.c1 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c6 {
  top: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      disabled={false}
    >
      <div
        className="c3"
      >
        <input
          className="c4"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          value="Value"
        />
        <label
          className="fa-text-gray-01 fa-text-sm c5"
          disabled={false}
        >
          Label
        </label>
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <p
          className="c8"
        >
          Some error
        </p>
      </div>
    </div>
  </div>
  <div
    className="c9"
  />
</div>
`;
